controller/pkg/agentgateway/translator/testdata/routes/route-delegation-backend-references.yaml
# This gateway should NOT see any routes attached
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: not-test-gateway
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent
  namespace: default
spec:
  parentRefs:
  - name: test-gateway
  hostnames:
  - delegation.example
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: child-team1-foo
  namespace: team1
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1/foo
    backendRefs:
    - name: be
      group: agentgateway.dev
      kind: AgentgatewayBackend
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: be
  namespace: team1
spec:
  static:
    host: primary.example.com
    port: 80
  policies:
    tunnel:
      backendRef:
        name: policy-be
        group: agentgateway.dev
        kind: AgentgatewayBackend
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: policy-be
  namespace: team1
spec:
  static:
    host: policy.example.com
    port: 80
---
# Policy is attached to gateway via Route -> Route -> Gateway
# policy-be should be attached via BE -> Policy -> Route -> Route -> Gateway
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: agw
  namespace: team1
spec:
  targetRefs:
    - kind: HTTPRoute
      name: child-team1-foo
      group: gateway.networking.k8s.io
  traffic:
    extAuth:
      grpc: {}
      backendRef:
        name: policy-be
        group: agentgateway.dev
        kind: AgentgatewayBackend
---
# Output
output:
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - routeGroupKey: team1/*
        weight: 1
      hostnames:
      - delegation.example
      key: default/parent.00.http
      listenerKey: default/test-gateway.http
      matches:
      - path:
          pathPrefix: /anything/team1
      name:
        kind: HTTPRoute
        name: parent
        namespace: default
- gateway:
    Name: test-gateway
    Namespace: default
  resource:
    route:
      backends:
      - backend:
          backend: team1/be
        weight: 1
      key: team1/child-team1-foo.00.routegroup.team1.wildcard
      matches:
      - path:
          pathPrefix: /anything/team1/foo
      name:
        kind: HTTPRoute
        name: child-team1-foo
        namespace: team1
      routeGroupKey: team1/*
status:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: parent
    namespace: default
  spec: null
  status:
    parents:
    - conditions:
      - lastTransitionTime: fake
        message: ""
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: fake
        message: ""
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: agentgateway.dev/agentgateway
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: test-gateway
        namespace: default
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: child-team1-foo
    namespace: team1
  spec: null
  status:
    parents: []
